--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sizer: ^2.0.15
   http: ^1.2.1
   flutter_screenutil: ^5.9.1
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
