--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.1
   flutter_screenutil: ^5.9.1
   geolocator: ^12.0.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
