--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_screenutil: ^5.9.1
   geolocator: ^12.0.0
   shared_preferences: ^2.2.3
+  image_picker: ^1.1.1
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
